xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__pattern__tests__union_with_union.snap
---
source: xee-xpath-ast/src/parser/pattern.rs
expression: "pattern::Pattern::parse(\"foo | (bar | baz)\", &namespaces, &variable_names)"
---
Ok(Expr(BinaryExpr(BinaryExpr(
  operator: Union,
  left: Path(PathExpr(
    root: Relative,
    steps: [
      AxisStep(AxisStep(
        forward: Child,
        node_test: NameTest(Name(Name(
          name: "foo",
          prefix: None,
          namespace: None,
        ))),
        predicates: [],
      )),
    ],
  )),
  right: Path(PathExpr(
    root: Relative,
    steps: [
      PostfixExpr(PostfixExpr(
        expr: BinaryExpr(BinaryExpr(
          operator: Union,
          left: Path(PathExpr(
            root: Relative,
            steps: [
              AxisStep(AxisStep(
                forward: Child,
                node_test: NameTest(Name(Name(
                  name: "bar",
                  prefix: None,
                  namespace: None,
                ))),
                predicates: [],
              )),
            ],
          )),
          right: Path(PathExpr(
            root: Relative,
            steps: [
              AxisStep(AxisStep(
                forward: Child,
                node_test: NameTest(Name(Name(
                  name: "baz",
                  prefix: None,
                  namespace: None,
                ))),
                predicates: [],
              )),
            ],
          )),
        )),
        predicates: [],
      )),
    ],
  )),
))))
